Fix invisible autocomplete preview text.

--- a/styles/chatcommands.css
+++ b/styles/chatcommands.css
@@ -4,15 +4,14 @@
   
   #chat-form .chatghosttextarea {
     position: absolute;
-    top: 0;
-    left: 0px;
+    top: 1px;
+    left: 1px;
     z-index: 1;
     opacity: 0.5;
     box-shadow: none;
     outline: none;
     pointer-events: none;
     background: transparent;
-    display: none;
   }
   
   .chatghosttextarea:not(.show) {
